--- a/1-drum-kit/styles.css
+++ b/1-drum-kit/styles.css
@@ -34,6 +34,8 @@ img.bg {
   width: 60px;
   height: 60px;
   font-size: 18px;
+  margin: 3px;
+  transition: all .2s;
 }
 
 #buttons-wrapper button span {
@@ -43,6 +45,7 @@ img.bg {
   padding-top: 2px;
 }
 
-.active {
+.active {  
   border-color: yellow!important;
+  transform: scale(1.2);
 }
