--- a/2-css-js-clock/styles.css
+++ b/2-css-js-clock/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: steelblue;
+  background: #ccc; 
 }
 
 #wrapper {
@@ -10,7 +10,8 @@ body {
 }
 
 #clock {
-  border: 8px solid #fff;
+  border: 8px solid #5c5c5c;
+  background: #fff;
   border-radius: 50%;
   width: 250px;
   height: 250px;
@@ -18,12 +19,12 @@ body {
 
 .arrow {
   height: 2px;
-  background: black;
+  background: #5c5c5c;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transform-origin: 0;
+  transform-origin: 7px;
 }
 
 #hour-arrow {
@@ -35,5 +36,6 @@ body {
 }
 
 #second-arrow {
+  background: #a00;
   width: 115px;
 }
